--- a/index.html
+++ b/index.html
@@ -4,34 +4,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MTW App Template</title>
-    <!--
-        The tailwind CDN is designed for development purposes only, and is not the best choice for production.
-        Read more here: https://tailwindcss.com/docs/installation 
-    -->
-    <script src="https://cdn.tailwindcss.com"></script>
-    <!-- example for dark theme styling when using tailwind cdn -->
-    <style>
-        /*examples for dark/light themes*/
-        .dark .dark\:text-white {
-            color: #fff;
-        }
-        .dark .dark\:bg-gray-800 {
-            background-color: #1f2937;
-        }
-        .light .light\:text-black {
-            color: #000;
-        }
-
-        /*add your custom css rules here*/
-    </style>
+    <title>Calculatorasdasd</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
-<body class="dark:text-white light:text-black">
+<body>
+<div class="calculator">
+    <div>
+        <div class="display" id="display">0</div>
 
-    <!-- your app code goes here -->
+        <div class="button c" onclick="clearDisplay()">C</div>
+    </div>
+    <div>
+        <div class="button" onclick="appendNumber('1')">1</div>
+        <div class="button" onclick="appendNumber('2')">2</div>
+        <div class="button" onclick="appendNumber('3')">3</div>
+        <div class="button operator" onclick="chooseOperation('/')">/</div>
+    </div>
+    <div>
+        <div class="button" onclick="appendNumber('4')">4</div>
+        <div class="button" onclick="appendNumber('5')">5</div>
+        <div class="button" onclick="appendNumber('6')">6</div>
+        <div class="button operator" onclick="chooseOperation('*')">*</div>
 
-    <!-- special scripts for integration in App Gallery - must be placed at the bottom of the HTML after your code -->
+    </div>
+    <div>
+        <div class="button" onclick="appendNumber('7')">7</div>
+        <div class="button" onclick="appendNumber('8')">8</div>
+        <div class="button" onclick="appendNumber('9')">9</div>
+        <div class="button operator" onclick="chooseOperation('-')">-</div>
+
+    </div>
+    <div>
+        <div class="button" onclick="appendNumber('0')">0</div>
+        <div class="button" onclick="appendNumber('.')">.</div>
+        <div class="button operator" onclick="compute()">=</div>
+        <div class="button operator" onclick="chooseOperation('+')">+</div>
+
+    </div>
+
+</div>
+
+<script src="script.js"></script>
     <script>
         // custom config for the MTW app 
         const mtwAppConfig = {
