--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <body>
 <div class="calculator">
     <div>
+        <img src="pngegg.png" alt="Casio logo" style="width: 100px;height: 20px;">
+    </div>
+    <div>
         <div class="display" id="display">0</div>
 
         <div class="button c" onclick="clearDisplay()">C</div>
