general changes I learn different things about css

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <div class="calculator">
     <div>
-        <img src="pngegg.png" alt="Casio logo" style="width: 100px;height: 20px;">
+        <img src="pngegg.png" alt="Casio logo" class="img">
     </div>
     <div>
         <div class="display" id="display">0</div>
