--- a/index.html
+++ b/index.html
@@ -48,33 +48,33 @@
 
 </div>
 
-<script src="script.js"></script>
-    <script>
-        // custom config for the MTW app 
-        const mtwAppConfig = {
-            border: true // app border in the MTW page                    
-        }
+<script src="calcjs.js"></script>
+<!--    <script>-->
+<!--        // custom config for the MTW app -->
+<!--        const mtwAppConfig = {-->
+<!--            border: true // app border in the MTW page                    -->
+<!--        }-->
 
-        ///////////////////////////////////////////////////////
-        // implement this functions in order to use private API        
-        const sendPrivateApiRequest = async () => {
-            // your code here:
-            // sendRequestToParent({ cat: 'getAssets' })
-        }        
+<!--        ///////////////////////////////////////////////////////-->
+<!--        // implement this functions in order to use private API        -->
+<!--        const sendPrivateApiRequest = async () => {-->
+<!--            // your code here:-->
+<!--            // sendRequestToParent({ cat: 'getAssets' })-->
+<!--        }        -->
 
-        const acceptPrivateApiResponse = async (data) => {
-            // process received data here:
-            // console.log(data)
-        }
+<!--        const acceptPrivateApiResponse = async (data) => {-->
+<!--            // process received data here:-->
+<!--            // console.log(data)-->
+<!--        }-->
 
-        // use this in order to send on document load
-        document.addEventListener('DOMContentLoaded', () => {
-            // your code here:
-            //sendRequestToParent({ method: 'getAssets' })
-        })
+<!--        // use this in order to send on document load-->
+<!--        document.addEventListener('DOMContentLoaded', () => {-->
+<!--            // your code here:-->
+<!--            //sendRequestToParent({ method: 'getAssets' })-->
+<!--        })-->
 
-    </script>
-    <script src="https://morethanwallet.com/appstore/index.js"></script>
+<!--    </script>-->
+<!--    <script src="https://morethanwallet.com/appstore/index.js"></script>-->
 </body>
 
 </html>
